# Wireshark-MCP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  README_zh.md  SECURITY.md  docker-compose.yml  pyproject.toml  server.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/prompts/: wireshark-traffic-analysis.prompt.md
.github/skills/wireshark-traffic-analysis/: SKILL.md
.github/workflows/: ci.yml  publish.yml
changelog/: 0.2.1.md  0.4.0.md  0.6.0.md  0.6.1.md  0.6.2.md  0.6.3.md  0.6.4.md  1.0.0.md  1.1.0.md  1.1.5.md  1.2.0.md  2.0.0.md  unreleased-opencode.md  unreleased-release-automation.md
docs/: manual-configuration.md  manual-configuration_zh.md  platform-validation.md  platform-validation_zh.md  prompt-engineering.md  prompt-engineering_zh.md  release-announcement-v1.0.0.md  release-announcement-v1.0.0_zh.md  release-checklist.md
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
docs-site/src/pages/: 404.astro
docs-site/src/styles/: custom.css
docs/superpowers/plans/: 2026-05-12-phase1-v1.3.md  2026-05-12-phase2-v1.4.md  2026-05-12-phase3-v2.0.md
docs/superpowers/specs/: 2026-05-12-roadmap-v2-design.md
homebrew/.github/scripts/: generate_formula.py
homebrew/Formula/: wireshark-mcp.rb
scripts/: demo_cli.sh  sync_skills.py
skills/: manifest.json
skills/wireshark-traffic-analysis/: SKILL.md
skills/wireshark-traffic-analysis/references/: report-template.md
src/wireshark_mcp/: __init__.py  installer.py  prompts.py  resources.py  server.py  toolchain.py
src/wireshark_mcp/data/: nl_templates.yaml
src/wireshark_mcp/installer/: __init__.py  _clients.py  _config_gen.py  _detection.py  _doctor.py  _orchestrator.py  _tui.py  _writer.py
src/wireshark_mcp/tools/: __init__.py  agents.py  anomaly.py  capture.py  decode.py  edit.py  envelope.py  extract.py  files.py  forensics.py  formatting.py  ics.py  imports.py  investigator.py  iot.py  nl_query.py  playbooks.py  protocol.py  (+7 more)
tests/: conftest.py  test_agents.py  test_anomaly.py  test_cache.py  test_capture.py  test_client.py  test_concurrency.py  test_decode.py  test_envelope.py  test_extract_features.py  test_files.py  test_forensics.py  test_ics.py  test_installer.py  test_investigator.py  test_iot.py  test_new_protocols.py  test_nl_query.py  test_phase3_integration.py  test_playbooks.py  test_prompts_resources.py  test_prompts_v14.py  test_protocol.py  test_protocol_wireless.py  test_public_tool_surface.py  test_registry.py  test_release_metadata.py  test_reporter.py  test_security.py  test_server.py  test_skill_distribution.py  test_stats.py  test_threat.py  test_token_budget.py  test_visualize.py
(+63 files in other folders)
